Status 모듈 식물용/범용 분리, 식물상태 CommandService 분리, 요주의 식물/아닌 식물 리파지토리 메소드 작성